--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1,7 +1,7 @@
 .main_nav {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   height: 20vh;
 }
